[package]
name = "gltf_extras_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
# bevy_egui = "0.13"
# bevy_asset_loader = "0.10.0"
# iyes_loopless = "0.4.0"
# bevy_tweening = "0.4.0"
bevy-inspector-egui = "0.10.0"
serde_json = "1.0"